<resources>
    <string name="app_name">RADAR</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtRegister">REGISTER</string>
    <string name="txtEmail"> Email</string>
    <string name="txtPwd"> Password</string>
    <string name="txtUsername"> Username</string>
    <string name="btnJoinRadar">JOIN RADAR</string>
    <string name="txtWelcome">get best moment with radar</string>
    <string name="txtJoinNow">JOIN NOW!</string>
    <string name="search">Search</string>
    <string name="seachview">Find Products…</string>
    <string name="wishlistemty1">NOTHING SAVED YET</string>
    <string name="wishlistemty2">Tap the heart icon to save items here for later.</string>
    <string name="bag1">YOUR BAG IS EMPTY</string>
    <string name="bag2">Why is that? Let\'s get creative</string>
    <string name="txtShopNow">Shop Now</string>
    <string name="txtWelGuy">WELCOME GUYS!</string>
    <string name="men">MEN</string>
    <string name="jacket">JACKET</string>
    <string name="pants">Pants</string>
    <string name="t_shirt">T-shirt</string>
    <string name="denim">Denim</string>
    <string name="coat">Coat</string>
    <string name="sneaker">Sneaker</string>
    <string name="woman">WOMAN</string>
    <string name="shirt">Shirt</string>
    <string name="bag">Bag</string>
    <string name="shoes">Shoes</string>
    <string name="swimwear">Swimwear</string>
    <string name="title">Title</string>
    <string name="plusSign">+</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="type_your_email">Type your email...</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="done">DONE</string>
    <string name="create">CREATE</string>
    <string name="read">READ</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="image">Image</string>
    <string name="dockey">Dockey</string>
    <string name="add">ADD</string>
    <string name="radar">RADAR</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="price">Price</string>
    <string name="present">It\'s not only writers who can benefit from this free online tool. If you\'re a programmer who\'s working on a project where blocks of text are needed, this tool can be a great way to get that. It\'s a good way to test your programming and that the tool being created is working well. Above are a few examples of how the random paragraph generator can be beneficial. The best way to see if this random paragraph picker will be useful for your intended purposes is to give it a try. Generate a number of paragraphs to see if they are beneficial to your current project. If you do find this paragraph tool useful, please do us a favor and let us know how you\'re using it. It\'s greatly beneficial for us to know the different ways this tool is being used so we can improve it with updates. This is especially true since there are times when the generators we create get used in completely unanticipated ways from when we initially created them. If you have the time, please send us a quick note on what you\'d like to see changed or added to make it better in the future.</string>
    <string name="description">Description</string>
    <string name="gia_ban">Gia Ban</string>
    <string name="ten_san_pham">Ten San Pham</string>
    <string name="total_price">TOTAL PRICE:</string>
    <string name="payment">PAYMENT</string>
    <string name="remove_all">REMOVE ALL</string>
    <string name="payment_confirm">PAYMENT CONFIRM</string>
    <string name="payment_method">PAYMENT METHOD:</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="product_upper">PRODUCT:</string>
    <string name="price_upper">PRICE</string>
    <string name="confirm">CONFIRM</string>
    <string name="close">CLOSE</string>
    <string name="name">NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="order">ORDER</string>
    <string name="voucher">Voucher</string>
    <string name="edit">EDIT</string>
    <string name="phone">PHONE</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="address">ADDRESS</string>
    <string name="id">ID</string>
    <string name="total_product">TOTAL PRODUCT:</string>
    <string name="_2">2</string>
    <string name="processing">PROCESSING...</string>
    <string name="contact_us">CONTACT US</string>
    <string name="update_your_profile">UPDATE YOUR PROFILE</string>
    <string name="you_haven_t_any_orders">YOU HAVEN\'T ANY ORDERS</string>

    <string-array name="menshop">
        <item>Jacket</item>
        <item>Pants</item>
        <item>T-Shirt</item>
        <item>Denim</item>
        <item>Coat</item>
        <item>Sneakers</item>
        <item>Bag</item>
    </string-array>

    <string-array name="womanshop">
        <item>Shirt</item>
        <item>T-shirt</item>
        <item>Bag</item>
        <item>Shoes</item>
        <item>Pants</item>
        <item>Jacket</item>
        <item>Swimwear</item>
    </string-array>

</resources>