<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".admin.CreateActivity">
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="43dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/product"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="61dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/price"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/categoryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/category"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtCategoryCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="54dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/image"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryCode" />

    <TextView
        android:id="@+id/dockey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="47dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dockey"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtDockey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:maxLength="20"
        android:theme="@style/InputText"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_rounded"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel" />

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:maxLength="20"
        android:theme="@style/InputText"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_rounded"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtDescription"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:theme="@style/InputText"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_rounded"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />

    <EditText
        android:id="@+id/txtCategoryCode"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:maxLength="20"
        android:theme="@style/InputText"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_rounded"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDescription" />

    <EditText
        android:id="@+id/txtImage"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:theme="@style/InputText"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_rounded"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoryCode" />

    <EditText
        android:id="@+id/txtDockey"
        android:layout_width="263dp"
        android:layout_height="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:maxLength="20"
        android:theme="@style/InputText"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_rounded"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtImage" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="101dp"
        android:text="@string/add"
        android:background="@drawable/shape_button_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>